# netsentry-sensor

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.raspi.yml  docker-compose.span.yml  generate-env.sh  setup.sh
.github/workflows/: rust.yml
config/network/: interfaces-bridge  systemd-bridge
config/nginx/: pi-nginx.conf
config/suricata/rules/: idps-dynamic.rules
dev-test/: .env.example  README.md  docker-compose.yml
dev-test/scripts/: attack-nmap.sh  attack-sql.sh  view-logs.sh
dev-test/suricata/: suricata.yaml
docs/: ARCHITECTURE.md  BACKLOG.md  CLOUD_SETUP.md  DEVELOPMENT.md  OPERATIONS.md  PI_BRIDGE_SETUP.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  SPAN_TOPOLOGY.md  TODO.md  WIREGUARD_SETUP.md
ops/config/: logrotate.conf
ops/config/suricata/: raspi.yaml  suricata.yaml  vps.yaml
raspi/: suricata-entrypoint.sh
raspi/nginx/: Dockerfile
raspi/wireguard/: Dockerfile  entrypoint.sh
rules/custom/: test.rules
scripts/: build.sh  idps-manager.sh  mongo-init.js  netsentry.service  setup.sh
scripts/diagnostics/: check-eve-status.sh  debug-restart-loop.sh  diagnose-suricata.sh  fix-dns-resolution.sh  fix-iptables.sh
scripts/setup/: README.md  SETUP-WIREGUARD.md  api-gateway.env.example  docker-compose.yml  idps-bridge.service  install.sh  revert-bridge.sh  setup-bridge-unified.sh  setup-span-port.sh  setup-suricata-scratch.sh  setup-wireguard-pi.command  setup-wireguard-pi.ps1  setup-wireguard-pi.sh  setup-wireguard-vps.command  setup-wireguard-vps.ps1  setup-wireguard-vps.sh
scripts/setup/.github/workflows/: docker.yml
scripts/setup/images/api-gateway/: Dockerfile
scripts/setup/images/bridge/: Dockerfile  entrypoint.sh
scripts/setup/images/suricata/: Dockerfile  suricata.yaml
src/services/edge/: base.Dockerfile
src/services/edge/firewall-forwarder/: Cargo.toml  Dockerfile
src/services/edge/firewall-forwarder/src/: main.rs
src/services/edge/network-filter/: Cargo.toml  Dockerfile
src/services/edge/network-filter/src/: lib.rs  main.rs
src/services/edge/network-filter/src/controllers/: mod.rs
src/services/edge/network-filter/src/models/: mod.rs
src/services/edge/network-filter/src/services/: mod.rs
src/services/edge/packet-processor/: Cargo.toml  Dockerfile
src/services/edge/packet-processor/src/: main.rs
src/services/edge/packet-processor/src/controllers/: mod.rs
src/services/edge/packet-processor/src/models/: mod.rs
src/services/edge/raspi-collector/: Cargo.toml  Dockerfile
src/services/edge/raspi-collector/src/: lib.rs  main.rs
src/services/edge/raspi-collector/src/controllers/: mod.rs
src/services/edge/raspi-collector/src/models/: mod.rs
src/services/edge/raspi-collector/src/services/: mod.rs
src/services/edge/rule-engine/: Cargo.toml  Dockerfile
src/services/edge/rule-engine/src/: executor.rs  lib.rs  main.rs  matcher.rs  parser.rs
src/services/edge/telemetry/: Cargo.toml  Dockerfile
src/services/edge/telemetry/src/: lib.rs  main.rs
src/services/edge/telemetry/src/controllers/: mod.rs
src/services/edge/telemetry/src/models/: mod.rs
src/services/edge/telemetry/src/services/: mod.rs
src/shared/config/: Cargo.toml
src/shared/config/src/: lib.rs
src/shared/protocols/: Cargo.toml
src/shared/protocols/src/: lib.rs
src/shared/types/: Cargo.toml
src/shared/types/src/: lib.rs
src/shared/utils/: Cargo.toml
src/shared/utils/src/: lib.rs
