[workspace]
resolver = "2"
members = [
    # Shared libraries
    "src/shared/types",
    "src/shared/protocols",
    "src/shared/utils",
    "src/shared/config",

    # Edge services (Raspberry Pi)
    "src/services/edge/packet-processor",
    "src/services/edge/network-filter",
    "src/services/edge/firewall-forwarder",
    "src/services/edge/rule-engine",
    "src/services/edge/raspi-collector",
    "src/services/edge/telemetry",
    ]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP and WebSocket
reqwest = { version = "0.12", features = ["json", "stream"] }
warp = "0.3"
tokio-tungstenite = "0.26"
hyper = { version = "1.5", features = ["full"] }
actix-web = "4.9"
actix-cors = "0.7"
axum = { version = "0.8", features = [] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
mongodb = "3.1"
redis = { version = "0.27", features = ["tokio-comp"] }

# Logging and metrics
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Network and packet processing
pcap = "2.0"
etherparse = "0.15"
nix = "0.29"
libc = "0.2"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
dashmap = "6.1"
futures-util = "0.3"
rand = "0.9"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# System metrics
sysinfo = "0.33"
hostname = "0.4"

# DNS / threat intel
hickory-resolver = "0.24"
maxminddb = "0.24"

# Network and Configuration
ipnetwork = "0.20"
serde_yaml = "0.9"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
