[package]
name = "idps-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for IDPS services"
authors = ["IDPS Team"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }

# Configuration-specific dependencies
config = "0.13"
toml = "0.8"

# Additional dependencies
log = { workspace = true }

# Internal dependencies
idps-types = { path = "../types" }
