[package]
name = "idps-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

# System metrics
sysinfo = { workspace = true }

# Hostname resolution
hostname = { workspace = true }

# Shared libraries
idps-utils = { path = "../../../shared/utils" }
idps-config = { path = "../../../shared/config" }
